--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -3,17 +3,18 @@
 * {
     margin: 0;
     padding: 0;
-    font-family:'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body {
-    background-color: #d6bda6;
+    background-image: linear-gradient(90deg, white 55%, #d6bda6 45%);
 }
 
 header {
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
 }
 
 nav {
@@ -30,15 +31,21 @@ a {
     font-weight: bolder;
 }
 
-a{
+a {
     transition: all 0.1s ease;
 }
 
-a:hover{
+main {
+    width: 90%;
+    margin: 0 auto;
+}
+
+a:hover {
     border-bottom: 0.16rem solid rgba(61, 60, 60, 0.808);
 }
 
-.boton_1:hover, .boton_2:hover{
+.boton_1:hover,
+.boton_2:hover {
     border: 0.16rem solid rgba(61, 60, 60, 0.808);
     border-radius: 0.16rem;
 }
@@ -101,6 +108,44 @@ a:hover{
     font-weight: bolder;
 }
 
-.boton_1, .boton_2{
+.boton_1,
+.boton_2 {
     transition: all 0.1s ease;
+}
+
+.section_main {
+    display: flex;
+}
+
+.div_texto{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    border: 1px solid yellow;
+}
+
+.div_img_main {
+    display: flex;
+}
+
+.div_img {
+    border: 1px solid black;
+}
+
+.portrait {
+    height: 90vh;
+    border: 1px solid saddlebrown;
+}
+
+.div_numeros {
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.uno,
+.dos,
+.tres {
+    border: 1px solid blue;
 }
