cambio color border .portrait

--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -134,7 +134,7 @@ a:hover {
 
 .portrait {
     height: 90vh;
-    border: 1px solid saddlebrown;
+    border: 1px solid slateblue;
 }
 
 .div_numeros {
