--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -117,11 +117,29 @@ a:hover {
     display: flex;
 }
 
-.div_texto{
+.div_texto {
     display: flex;
     flex-direction: column;
-    justify-content: end;
     border: 1px solid yellow;
+    flex-wrap: wrap;
+    width: 50%;
+}
+
+.div_numeros {
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.boton_3{
+    width: 10rem;
+}
+
+.uno,
+.dos,
+.tres {
+    border: 1px solid blue;
 }
 
 .div_img_main {
@@ -133,19 +151,6 @@ a:hover {
 }
 
 .portrait {
-    height: 80vh;
+    height: 84vh;
     border: 1px solid slateblue;
-}
-
-.div_numeros {
-    border: 1px solid red;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-}
-
-.uno,
-.dos,
-.tres {
-    border: 1px solid blue;
 }
