--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: linear-gradient(90deg, white 55%, #d6bda6 45%);
+    background-image: linear-gradient(90deg, white 60%, #d6bda6 40%);
 }
 
 header {
@@ -15,12 +15,10 @@ header {
     align-items: center;
     width: 90%;
     margin: 0 auto;
-    border: 1px solid cadetblue;
 }
 
 nav {
-    border: 1px solid blue;
-    width: 33%;
+    width:38%;
     display: flex;
     justify-content: space-evenly;
 }
@@ -28,8 +26,8 @@ nav {
 a {
     color: rgba(22, 22, 22, 0.863);
     text-decoration: none;
-    font-size: smaller;
-    font-weight: bolder;
+    font-size: 1.3rem;
+    font-weight:bold;
 }
 
 a {
@@ -39,13 +37,13 @@ a {
 main {
     width: 90%;
     margin: 0 auto;
-    border: 1px solid cadetblue;
+    height: 87vh;
 }
 
 h1{
-    font-size: 4rem;
+    font-size: 6rem;
     font-family: 'PT Serif', serif;
-    font-weight:500;
+    font-weight:bold;
     font-style:inherit;
 }
 
@@ -53,8 +51,7 @@ a:hover {
     border-bottom: 0.16rem solid rgba(61, 60, 60, 0.808);
 }
 
-.boton_1:hover,
-.boton_2:hover {
+.boton_1:hover {
     border: 0.16rem solid rgba(61, 60, 60, 0.808);
     border-radius: 0.16rem;
 }
@@ -66,38 +63,42 @@ a:hover {
 
 .div_logo {
     width: 15%;
-    border: 1px solid chartreuse;
 }
 
 .logo {
-    height: 4.3rem;
+    height: 8rem;
 }
 
 .section_header {
     width: 52%;
-    border: 1px solid red;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 
 .div_iconos {
-    width: 20%;
+    width: 15%;
     padding-right: 1rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     align-items: center;
-    border-right: 0.13rem solid rgba(90, 90, 90, 0.301);
+    border-right: 0.13rem solid rgba(90, 90, 90, 0.527);
 }
 
 .lupa {
-    height: 1rem;
-    margin: 0.5rem
+    height: 2rem;
 }
 
 .bolsa {
-    height: 1rem;
-    margin: 0.5em;
+    height: 2rem;
+}
+
+.notificacion{
+    z-index: 1;
+    height: 1.8rem;
+    position: fixed;
+    top: 2.5rem;
+    left: 96rem;
 }
 
 .div_botones {
@@ -110,15 +111,15 @@ a:hover {
     padding: 0.3rem 0.8rem 0.2rem 0.8rem;
     border: none;
     background-color: #d6bda6;
-    font-size: smaller;
+    font-size: 1.1rem;
     font-weight: bolder;
 }
 
 .boton_2 {
-    border: none;
-    padding: 0.3rem 0.8rem 0.2rem 0.8rem;
+    border: 0.13rem solid black;
+    padding: 0.4rem 1.3rem 0.3rem 1.3rem;
     background-color: #d6bda6;
-    font-size: smaller;
+    font-size: 1.1rem;
     font-weight: bolder;
 }
 
@@ -135,27 +136,18 @@ a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid yellow;
     width: 43%;
-}
-
-
-.div_numeros {
-    border: 1px solid red;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: end;
+    margin-top: 5rem;
 }
 
 .boton_3{
-    width: 8rem;
-    height: 2.7rem;
+    width: 14rem;
+    height: 4.5rem;
     margin-top: 4rem;
-    border: 0.18rem solid black ;
+    border: 0.2rem solid black ;
     color: #000;
-    font-weight: bold;
-    font-size: small;
+    font-weight: 600;
+    font-size: 1.35rem;
 }
 
 .boton_3{
@@ -163,36 +155,56 @@ a:hover {
 }
 
 .div_p_texto{
-    width: 60%;
-    line-height: 1.6rem;
-    font-size: 1.12rem;
+    width: 70%;
 }
 
 .p_texto{
     font-family: 'PT Serif', serif;
-    color: rgb(44, 44, 44);
+    color: rgb(122, 122, 122);
+    line-height: 1.9rem;
+    font-size: 1.2rem;
+    font-weight:600;
+}
+
+.div_img_main {
+    display: flex;
+    gap: 52%;
+}
+
+.div_img {
+    height: 86.3vh;
+}
+
+.portrait {
+    object-fit: cover;
+    position: relative;
+    height: 100%;
+    bottom: -0.95rem;
+    right: -4rem;
+}
+
+.div_numeros {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .uno,
 .dos,
 .tres {
-    border: 1px solid blue;
+    height: 4rem;
+    padding-right: 0.5rem;
+    font-size: 0.7rem;
 }
 
-.div_img_main {
-    display: flex;
-    gap: 50%;
+.uno{
+    border-right: 0.4rem solid #000;
 }
 
-.div_img {
-    border: 1px solid black;
-    height: 85vh;
-    width: 50vw;
+.dos{
+    border-right: 0.4rem solid #4e4e4e;
 }
 
-.portrait {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-    border: 1px solid slateblue;
+.tres{
+    border-right: 0.4rem solid #575555;
 }
